standards/gnds-2.0/try/c/src/v2.0/resonances/J.h


// THIS FILE WAS AUTOGENERATED!
// DO NOT MODIFY!

// Interface for C
// This header file is designed to work with both C and C++
// Function definitions are in this file's .cpp source

// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------
// Instructions for Users
//
// Constructs you're MORE likely to care about are preceded with:
//    // +++ comment
// Constructs you're LESS likely to care about are preceded with:
//    // --- comment
// Anything not marked as above can be ignored by most users.
//
// J is the basic handle type in this file. Example:
//    // Create a default J object:
//    J handle = JDefault();
// Functions involving J are declared throughout this file.
// -----------------------------------------------------------------------------
// -----------------------------------------------------------------------------


// -----------------------------------------------------------------------------
// Preliminaries
// -----------------------------------------------------------------------------

#ifndef C_INTERFACE_TRY_V2_0_RESONANCES_J
#define C_INTERFACE_TRY_V2_0_RESONANCES_J

#include "GNDStk.h"
#include "v2.0/resonances/LevelSpacing.h"
#include "v2.0/resonances/Widths.h"

#ifdef __cplusplus
   #define extern_c extern "C"
#else
   #define extern_c
#endif

// Proxy C struct for the handled C++ class
struct JClass { };


// -----------------------------------------------------------------------------
// Handle types
// -----------------------------------------------------------------------------

// +++ J
// +++ General handle, suitable for most users. If you're not concerned about
// +++ strict "const correctness" in your C code, you can probably use this in
// +++ place of any function parameter of a const-aware handle type.
typedef struct JClass *J;

// --- Const-aware handles.
typedef const struct JClass *const ConstHandle2ConstJ;
typedef       struct JClass *const ConstHandle2J;
typedef const struct JClass *      Handle2ConstJ;
typedef       struct JClass *      Handle2J;


// -----------------------------------------------------------------------------
// Basics
// Create, Assign, Delete
// -----------------------------------------------------------------------------

// --- Create, default, const
extern_c Handle2ConstJ
JDefaultConst();

// +++ Create, default
extern_c Handle2J
JDefault();

// --- Create, general, const
extern_c Handle2ConstJ
JCreateConst(
   const XMLName label,
   const Fraction32 value,
   ConstHandle2ConstLevelSpacing levelSpacing,
   ConstHandle2ConstWidths widths
);

// +++ Create, general
extern_c Handle2J
JCreate(
   const XMLName label,
   const Fraction32 value,
   ConstHandle2ConstLevelSpacing levelSpacing,
   ConstHandle2ConstWidths widths
);

// +++ Assign
// +++ Use this to assign one handled object to another. Don't assign handles,
// +++ as with to = from. That has a meaning that you probably don't intend.
extern_c void
JAssign(ConstHandle2J This, ConstHandle2ConstJ from);

// +++ Delete
// +++ We'll attempt to remove no-longer-used objects automatically, but you
// +++ may improve performance if you delete them when you're done with them.
extern_c void
JDelete(ConstHandle2ConstJ This);


// -----------------------------------------------------------------------------
// I/O
// Read, Write, Print
// Each returns 0 if failure, 1 if success.
// -----------------------------------------------------------------------------

// +++ Read from file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll examine the file's contents to determine its type automatically.
extern_c int
JRead(ConstHandle2J This, const char *const filename);

// +++ Write to file
// +++ File can be XML, JSON, or HDF5.
// +++ We'll use filename's extension to determine the type you want written.
extern_c int
JWrite(ConstHandle2ConstJ This, const char *const filename);

// +++ Print to standard output, in our prettyprinting format
extern_c int
JPrint(ConstHandle2ConstJ This);

// +++ Print to standard output, as XML
extern_c int
JPrintXML(ConstHandle2ConstJ This);

// +++ Print to standard output, as JSON
extern_c int
JPrintJSON(ConstHandle2ConstJ This);


// -----------------------------------------------------------------------------
// Metadatum: label
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
JLabelHas(ConstHandle2ConstJ This);

// +++ Get
// +++ Returns by value
extern_c XMLName
JLabelGet(ConstHandle2ConstJ This);

// +++ Set
extern_c void
JLabelSet(ConstHandle2J This, const XMLName label);


// -----------------------------------------------------------------------------
// Metadatum: value
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
JValueHas(ConstHandle2ConstJ This);

// +++ Get
// +++ Returns by value
extern_c Fraction32
JValueGet(ConstHandle2ConstJ This);

// +++ Set
extern_c void
JValueSet(ConstHandle2J This, const Fraction32 value);


// -----------------------------------------------------------------------------
// Child: levelSpacing
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
JLevelSpacingHas(ConstHandle2ConstJ This);

// --- Get, const
extern_c Handle2ConstLevelSpacing
JLevelSpacingGetConst(ConstHandle2ConstJ This);

// +++ Get, non-const
extern_c Handle2LevelSpacing
JLevelSpacingGet(ConstHandle2J This);

// +++ Set
extern_c void
JLevelSpacingSet(ConstHandle2J This, ConstHandle2ConstLevelSpacing levelSpacing);


// -----------------------------------------------------------------------------
// Child: widths
// -----------------------------------------------------------------------------

// +++ Has
extern_c int
JWidthsHas(ConstHandle2ConstJ This);

// --- Get, const
extern_c Handle2ConstWidths
JWidthsGetConst(ConstHandle2ConstJ This);

// +++ Get, non-const
extern_c Handle2Widths
JWidthsGet(ConstHandle2J This);

// +++ Set
extern_c void
JWidthsSet(ConstHandle2J This, ConstHandle2ConstWidths widths);


// -----------------------------------------------------------------------------
// Done
// -----------------------------------------------------------------------------

#undef extern_c
#endif